; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs/extr_fs-loader.c_default_warning_func.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs/extr_fs-loader.c_default_warning_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@svn_error_abort_on_malfunction = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"svn: fs-loader: \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @default_warning_func to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @default_warning_func(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = call i64 (...) @svn_error_get_malfunction_handler()
  %6 = load i64, i64* @svn_error_abort_on_malfunction, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %13

8:                                                ; preds = %2
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* @stderr, align 4
  %11 = load i32, i32* @FALSE, align 4
  %12 = call i32 @svn_handle_error2(i32* %9, i32 %10, i32 %11, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  br label %13

13:                                               ; preds = %8, %2
  %14 = call i32 (...) @SVN_ERR_MALFUNCTION_NO_RETURN()
  ret void
}

declare dso_local i64 @svn_error_get_malfunction_handler(...) #1

declare dso_local i32 @svn_handle_error2(i32*, i32, i32, i8*) #1

declare dso_local i32 @SVN_ERR_MALFUNCTION_NO_RETURN(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
